<resources>
    <string name="app_name">Seat reservation</string>
    <string name="title_home">Main</string>
    <string name="title_dashboard">Quick Reservation</string>
    <string name="title_notifications">User</string>
    <string name="action_back">Back</string>
    <string name="stuid">Student ID</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login/Register</string>
    <string name="login_failed">Login Failed</string>
    <string name="stuNamehint">Real Name</string>
    <string name="stuClasshint">Class</string>
    <string name="stuPhoneNumhint">Phone Number</string>
    <string name="register">Register</string>
    <string name="complete_info">you have not regstered yet. Complete your student info</string>
    <string name="acceptEULA">Accept the EULA</string>
    <string name="login_success">Login Success</string>
    <string name="error_phone">Wrong Phone Number</string>
    <string name="welcome_text">, Welcome!</string>
    <string name="Current_reserve_display_text">Your Current Reservations Here:</string>
    <string name="signin_btn">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="no_reservation_record">No reservation</string>
    <string name="look_for_record_btn">Look for more history Reservation</string>
    <string name="historyrecord">History Records</string>
    <string name="settingTheme">Change Theme</string>
    <string name="info">More Infomation</string>
    <string name="settinglang">Change Language</string>
    <string name="selectTime">Select Time and Location</string>
    <string name="reflash">Load Rooms</string>
    <string name="modify">Modify</string>
    <string name="modifytext">Modify your infomation, Only write the item you want to modify.</string>
    <string name="confirm">Confirm</string>
    <string name="reservationDialogConfirmTitle">Are you sure to reserve?</string>
    <string name="reserveSuccessTitle">"Success! "</string>
    <string name="reserveError">"There is a problem! "</string>
    <string name="reserveFailure">The %s position you selected has been occupied by %s, do you want to call a private number to ask?</string>
    <string name="logout">Log out</string>
    <string name="network_error">Network Error!!</string>
    <string name="reserve_dialog_content">You are going to reserve %s position.</string>
    <string name="reserve_dialog_content_posible_fail">" But it will be fail."</string>
    <string name="self_conflict">Conflict with reservation of yourself</string>
</resources>