<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <!-- 其他视图和控件 -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/complete_info"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stuName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stuNamehint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stuClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stuClasshint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stuPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stuPhoneNumhint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    <CheckBox
        android:id="@+id/acceptEULA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acceptEULA"/>
    <Button
        android:id="@+id/registerbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

</LinearLayout>