<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <!-- 其他视图和控件 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/modifytext"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stuName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stuNamehint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stuClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stuClasshint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stuPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stuPhoneNumhint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    <Button
        android:id="@+id/registerbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

</LinearLayout>