<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cxfwork.libraryappointment.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.cxfwork.libraryappointment.ui.quickreservation.QuickReservationFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_quick_reservation" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.cxfwork.libraryappointment.ui.user.UserFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_test"
        android:name="com.cxfwork.libraryappointment.ui.TestFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_test" />
    <fragment
        android:id="@+id/moreInfomationFragment"
        android:name="com.cxfwork.libraryappointment.ui.user.MoreInfomationFragment"
        android:label="fragment_more_infomation"
        tools:layout="@layout/fragment_more_infomation" />
</navigation>